--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 .env-*
 !.env-sample
 
+.vscode/*
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/settings.json
+!.vscode/tasks.json
+
 node_modules
