--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint --ignore-path .gitignore .",
     "migrate": "node-pg-migrate --config-file source/db/config.js --migrations-dir source/db/migrations",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENVIRONMENT=test jest --coverage",
+    "test:watch": "NODE_ENVIRONMENT=test jest --watch"
   },
   "dependencies": {
     "conf_conf": "^2.0.1",
@@ -24,6 +25,8 @@
     "eslint": "^4.16.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0"
+    "eslint-plugin-promise": "^3.6.0",
+    "jest": "^22.1.4",
+    "supertest": "^3.0.0"
   }
 }
