--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
     "test:watch": "NODE_ENVIRONMENT=test jest --watch"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.2",
     "conf_conf": "^2.0.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
+    "express-jwt-permissions": "^1.0.0",
+    "helmet": "^3.10.0",
+    "morgan": "^1.9.0",
     "node-pg-migrate": "^2.17.0",
     "pg": "^7.4.1",
     "pg-promise": "^7.4.0"
