--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
     "express-jwt-permissions": "^1.0.0",
+    "express-react-views": "^0.10.5",
     "helmet": "^3.10.0",
     "morgan": "^1.9.0",
     "node-pg-migrate": "^2.17.0",
     "pg": "^7.4.1",
-    "pg-promise": "^7.4.0"
+    "pg-promise": "^7.4.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "eslint": "^4.16.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.7.0",
     "jest": "^22.1.4",
     "supertest": "^3.0.0"
   }
