--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.9.0",
     "node-pg-migrate": "^2.17.0",
     "pg": "^7.4.1",
+    "pg-monitor": "^0.9.1",
     "pg-promise": "^7.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
