--- a/package.json
+++ b/package.json
@@ -35,9 +35,8 @@
   },
   "devDependencies": {
     "eslint": "^4.16.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
+    "eslint-config-bespoke": "^0.3.1",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.1.4",
     "supertest": "^3.0.0"
