--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {
-    "dev": "next",
-    "lint": "eslint --ext .mjs --ignore-path .gitignore .",
-    "migrate": "node-pg-migrate --config-file source/db/config.mjs --migrations-dir source/db/migrations",
-    "start": "node --experimental-modules source/index.mjs",
+    "lint": "eslint --ext .jsx --ext .mjs --ignore-path .gitignore .",
+    "migrate": "node-pg-migrate --config-file server/db/config.mjs --migrations-dir server/db/migrations",
+    "start": "node --experimental-modules server/index.mjs",
     "test": "NODE_ENV=test jest --coverage",
     "test:watch": "NODE_ENV=test jest --watch"
   },
