Properly lint all files

--- a/pages/.eslintrc.json
+++ b/pages/.eslintrc.json
@@ -2,5 +2,17 @@
   "env": {
     "browser": true,
     "node": true
+  },
+
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".mjs"
+        ]
+      }
+    }
   }
 }
