--- a/components/.eslintrc.json
+++ b/components/.eslintrc.json
@@ -1,5 +1,17 @@
 {
   "env": {
     "browser": true
+  },
+
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".mjs"
+        ]
+      }
+    }
   }
 }
