Keep up with the times

--- a/package.json
+++ b/package.json
@@ -14,38 +14,38 @@
     "test:watch": "NODE_ENV=test jest --watch"
   },
   "dependencies": {
-    "babel-plugin-emotion": "^9.1.2",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.2",
-    "conf_conf": "^2.0.1",
-    "cookie-parser": "^1.4.3",
-    "cross-env": "^5.1.4",
-    "dotenv": "^5.0.1",
-    "emotion": "^9.1.2",
-    "emotion-server": "^9.1.2",
-    "express": "^4.16.2",
-    "express-jwt": "^5.3.0",
-    "express-jwt-permissions": "^1.0.0",
-    "express-react-views": "^0.10.5",
-    "helmet": "^3.10.0",
-    "jsonwebtoken": "^8.1.1",
-    "morgan": "^1.9.0",
-    "next": "^6.0.0",
-    "node-pg-migrate": "^2.17.0",
-    "pg": "^7.4.1",
-    "pg-monitor": "^0.9.1",
-    "pg-promise": "^7.4.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-emotion": "^9.1.2"
+    "babel-plugin-emotion": "^9.x.x",
+    "bcryptjs": "^2.x.x",
+    "body-parser": "^1.x.x",
+    "conf_conf": "^2.x.x",
+    "cookie-parser": "^1.x.x",
+    "cross-env": "^5.x.x",
+    "dotenv": "^5.x.x",
+    "emotion": "^9.x.x",
+    "emotion-server": "^9.x.x",
+    "express": "^4.x.x",
+    "express-jwt": "^5.x.x",
+    "express-jwt-permissions": "^1.x.x",
+    "express-react-views": "^0.x.x",
+    "helmet": "^3.x.x",
+    "jsonwebtoken": "^8.x.x",
+    "morgan": "^1.x.x",
+    "next": "^6.x.x",
+    "node-pg-migrate": "^2.x.x",
+    "pg": "^7.x.x",
+    "pg-monitor": "^0.x.x",
+    "pg-promise": "^7.x.x",
+    "react": "^16.x.x",
+    "react-dom": "^16.x.x",
+    "react-emotion": "^9.x.x"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.1",
-    "eslint-config-bespoke": "^0.3.1",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-react": "^7.7.0",
-    "jest": "^22.1.4",
-    "supertest": "^3.0.0"
+    "babel-eslint": "^8.x.x",
+    "eslint": "^4.x.x",
+    "eslint-config-bespoke": "^0.x.x",
+    "eslint-plugin-import": "^2.x.x",
+    "eslint-plugin-react": "^7.x.x",
+    "jest": "^22.x.x",
+    "supertest": "^3.x.x"
   }
 }
