--- a/.editorconfig
+++ b/.editorconfig
@@ -19,9 +19,9 @@ indent_style = space
 indent_size = 2
 trim_trailing_whitespace = false
 
-[*.yml]
-indent_style = space
-indent_size = 2
+[*.sql]
+indent_style = tab
+indent_size = 4
 
 [package.json]
 indent_style = space
