Rip out (broken) tests until they can run without compilation
* Tests should be written with ES modules. Since Node is running the
  tests, this means files must end with `.mjs`
* Every file always should import whatever dependency it requires. For
  tests this means runner methods (`describe`, `it`) and an assertion
  library (I like `expect` syntax), along with any app-specific helpers
* Test runner should handle starting/stopping server on a random `PORT`
* Test runner should connect to test database. Simply setting
  `NODE_ENV=test` should be enough

I'm sure I'm missing something, but this is a good start. By the way
everything mentioned above is *commonplace* in Ruby

--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "migrate": "pg-bump --files server/db/migrations",
     "migrate:development": "env-cmd .env-development pg-bump --files server/db/migrations",
     "migrate:test": "env-cmd .env-test pg-bump --files server/db/migrations",
-    "start": "node --experimental-modules server/index.mjs",
-    "test": "NODE_ENV=test jest --coverage",
-    "test:watch": "NODE_ENV=test jest --watch"
+    "start": "node --experimental-modules server/index.mjs"
   },
   "dependencies": {
     "babel-plugin-emotion": "^9.x.x",
@@ -47,8 +45,6 @@
     "eslint": "^4.x.x",
     "eslint-config-bespoke": "^0.x.x",
     "eslint-plugin-import": "^2.x.x",
-    "eslint-plugin-react": "^7.x.x",
-    "jest": "^22.x.x",
-    "supertest": "^3.x.x"
+    "eslint-plugin-react": "^7.x.x"
   }
 }
