--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "helmet": "^3.x.x",
     "jsonwebtoken": "^8.x.x",
     "morgan": "^1.x.x",
+    "nanoid": "^1.x.x",
     "next": "^6.x.x",
     "pg": "^7.x.x",
     "pg-bump": "^2.x.x",
