--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "start": "node --experimental-modules server/index.mjs"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
     "babel-plugin-emotion": "^9.x.x",
     "bcryptjs": "^2.x.x",
     "body-parser": "^1.x.x",
