--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "lint": "eslint --ext .js --ext .jsx --ext .mjs --ignore-path .gitignore .",
     "migrate": "pg-bump --files server/db/migrations",
-    "migrate:development": "env-cmd .env-development pg-bump --files server/db/migrations",
-    "migrate:test": "env-cmd .env-test pg-bump --files server/db/migrations",
+    "migrate:dev": "env-cmd development.env pg-bump --files server/db/migrations",
+    "migrate:test": "env-cmd test.env pg-bump --files server/db/migrations",
     "start": "node --experimental-modules server/index.mjs"
   },
   "dependencies": {
