--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,16 @@
 {
+  "env": {
+    "es6": true
+  },
   "extends": [
+    "eslint:recommended",
     "bespoke",
     "plugin:react/recommended"
   ],
-
-  "parser": "babel-eslint"
+  "parser": "babel-eslint",
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
