--- a/package.json
+++ b/package.json
@@ -14,42 +14,47 @@
     "start": "node --require esm server/index.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
-    "@fortawesome/free-regular-svg-icons": "^5.1.0-11",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
-    "@fortawesome/react-fontawesome": "0.1.0-11",
-    "babel-plugin-emotion": "^9.x.x",
+    "@emotion/core": "^10.x.x",
+    "@emotion/styled": "^10.x.x",
+    "@fortawesome/fontawesome-svg-core": "^1.x.x",
+    "@fortawesome/free-regular-svg-icons": "^5.x.x",
+    "@fortawesome/free-solid-svg-icons": "^5.x.x",
+    "@fortawesome/react-fontawesome": "^0.x.x",
     "bcryptjs": "^2.x.x",
     "body-parser": "^1.x.x",
     "conf_conf": "^2.x.x",
     "cookie-parser": "^1.x.x",
     "cross-env": "^5.x.x",
-    "dotenv": "^5.x.x",
+    "dotenv": "^7.x.x",
     "emotion": "^9.x.x",
     "emotion-server": "^9.x.x",
     "esm": "^3.x.x",
     "express": "^4.x.x",
     "express-jwt": "^5.x.x",
     "express-jwt-permissions": "^1.x.x",
-    "express-react-views": "^0.x.x",
     "helmet": "^3.x.x",
     "jsonwebtoken": "^8.x.x",
     "morgan": "^1.x.x",
-    "nanoid": "^1.x.x",
-    "next": "^6.x.x",
+    "nanoid": "^2.x.x",
+    "next": "^8.x.x",
     "pg": "^7.x.x",
-    "pg-bump": "^2.x.x",
-    "pg-monitor": "^0.x.x",
-    "pg-promise": "^7.x.x",
+    "pg-bump": "^3.0.0-beta.4",
+    "pg-monitor": "^1.x.x",
+    "pg-promise": "^8.x.x",
+    "prop-types": "^15.x.x",
     "react": "^16.x.x",
-    "react-dom": "^16.x.x",
-    "react-emotion": "^9.x.x"
+    "react-dom": "^16.x.x"
   },
   "devDependencies": {
-    "babel-eslint": "^8.x.x",
+    "@babel/core": "^7.x.x",
+    "@babel/preset-env": "^7.x.x",
+    "@babel/preset-react": "^7.x.x",
+    "babel-eslint": "^10.x.x",
+    "babel-plugin-emotion": "^10.x.x",
     "env-cmd": "^8.x.x",
-    "eslint": "^4.x.x",
-    "eslint-config-bespoke": "^0.x.x",
+    "eslint": "^5.x.x",
+    "eslint-config-bespoke": "^1.x.x",
+    "eslint-plugin-emotion": "^10.x.x",
     "eslint-plugin-import": "^2.x.x",
     "eslint-plugin-react": "^7.x.x"
   }
