--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.x.x",
     "@fortawesome/free-solid-svg-icons": "^5.x.x",
     "@fortawesome/react-fontawesome": "^0.x.x",
+    "@roarr/cli": "^1.x.x",
+    "@roarr/middleware-serialize-error": "^1.x.x",
     "bcryptjs": "^2.x.x",
     "body-parser": "^1.x.x",
     "conf_conf": "^2.x.x",
@@ -32,9 +34,9 @@
     "express": "^4.x.x",
     "express-jwt": "^5.x.x",
     "express-jwt-permissions": "^1.x.x",
+    "express-list-endpoints": "^4.x.x",
     "helmet": "^3.x.x",
     "jsonwebtoken": "^8.x.x",
-    "morgan": "^1.x.x",
     "nanoid": "^2.x.x",
     "next": "^8.x.x",
     "pg": "^7.x.x",
@@ -43,7 +45,8 @@
     "pg-promise": "^8.x.x",
     "prop-types": "^15.x.x",
     "react": "^16.x.x",
-    "react-dom": "^16.x.x"
+    "react-dom": "^16.x.x",
+    "roarr": "^2.x.x"
   },
   "devDependencies": {
     "@babel/core": "^7.x.x",
