Rename project to match package naming convention

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "less_longer",
+  "name": "less-longer",
   "version": "1.0.0",
   "description": "Self-hosted URL shortening service",
   "author": "Thomas Ingram",
