--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-list-endpoints": "^4.x.x",
     "helmet": "^3.x.x",
     "jsonwebtoken": "^8.x.x",
+    "method-override": "^3.x.x",
     "nanoid": "^2.x.x",
     "next": "^8.x.x",
     "pg": "^7.x.x",
